Tinyscript Core: Rename ExecutionVisitor (the core part of the interpreter) to TinyscriptEngine